--- a/templates/css/blog.css
+++ b/templates/css/blog.css
@@ -1,9 +1,8 @@
 .lenta {
     background: linear-gradient(to top,dimgray,whitesmoke);
-    border: 1px solid;
+   /* border: 1px solid;*/
     border-radius: 5px;
     opacity: 0.95;
-
 }
 .note_head {
     line-height: 20px;
@@ -25,7 +24,7 @@
 }
 .note_bottom {
     padding: 0 15px 0 15px;
-    border-bottom: 1px solid;
+   /* border-bottom: 1px solid; */
     text-align: right;
     font-size: 10px;
     font-style: italic;
