--- a/templates/css/blog.css
+++ b/templates/css/blog.css
@@ -1,14 +1,15 @@
 .lenta {
-    background: linear-gradient(to top,dimgray,whitesmoke);
-   /* border: 1px solid;*/
+    /*background: linear-gradient(to top,dimgray,whitesmoke);*/
+    /* border: 1px solid;*/
     border-radius: 5px;
     opacity: 0.95;
 }
+
 .note_head {
     line-height: 20px;
     height: 14px;
     font-weight: bold;
-    font-size: 22px ;
+    font-size: 32px;
     padding: 15px 15px 0 15px;
     color: navy;
 
@@ -20,11 +21,11 @@
     font-size: 13px;
     line-height: 160%;
 
-
 }
+
 .note_bottom {
     padding: 0 15px 0 15px;
-   /* border-bottom: 1px solid; */
+    border-bottom: 1px solid;
     text-align: right;
     font-size: 10px;
     font-style: italic;
